--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -1,3 +1,23 @@
+html {
+  font-size: 10px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: bisque;
+  background: linear-gradient(190deg, #1F3A61, #A1E8C8);
+}
+
+.main-section {
+  min-height: 100vh;
+  width: 100%;
+}
+
+.card {
+  margin: 25rem auto;
+  width: 60%;
 }
