--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -21,3 +21,17 @@ body {
   margin: 25rem auto;
   width: 60%;
 }
+
+.tasks {
+  padding: 1.5rem;
+}
+
+.list-item {
+  align-items: center;
+  justify-content: space-between;
+}
+
+.task-description > h6 {
+  display: inline-block;
+  font-size: 1.5rem;
+}
